# channel

./: CMakeLists.txt  README.md  cpm.dependencies  cpmpack.json
.github/workflows/: ci_on_pr.yml  cron_daily.yml  cron_daily_check_tag.yml  cron_weekly.yml
src/channel/: CMakeLists.txt  channel.h  value_mutex.h  workers.h
src/demo_channel/: CMakeLists.txt  main.cpp
src/test_channel/: CMakeLists.txt  main.cpp
